--- a/AllAzAlku2.csproj
+++ b/AllAzAlku2.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AjanlatDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AjanlatDialog.Designer.cs">
+      <DependentUpon>AjanlatDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Connect.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -56,6 +62,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AjanlatDialog.resx">
+      <DependentUpon>AjanlatDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
