--- a/AllAzAlku2.csproj
+++ b/AllAzAlku2.csproj
@@ -62,6 +62,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ranglista.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ranglista.Designer.cs">
+      <DependentUpon>Ranglista.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AjanlatDialog.resx">
       <DependentUpon>AjanlatDialog.cs</DependentUpon>
     </EmbeddedResource>
@@ -78,6 +84,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Ranglista.resx">
+      <DependentUpon>Ranglista.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
